--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "jwt-decode": "^2.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,5 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://europe-west1-socialape-d081e.cloudfunctions.net/api"
+  "proxy": "https://us-central1-social-network-react-2f9ef.cloudfunctions.net/api"
 }
